crates/oxc_linter/src/snapshots/nextjs_google_font_display.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(google-font-display): A font-display parameter is missing (adding `&display=optional` is recommended).
   ╭─[google_font_display.tsx:6:7]
 5 │                     <Head>
 6 │                     <link
   ·                      ────
 7 │                         href="https://fonts.googleapis.com/css2?family=Krona+One"
   ╰────
  help: See https://nextjs.org/docs/messages/google-font-display

  ⚠ nextjs(google-font-display): `block` is not a recommended font-display value.
   ╭─[google_font_display.tsx:7:17]
 6 │                        <link
 7 │                          href="https://fonts.googleapis.com/css2?family=Krona+One&display=block"
   ·                          ───────────────────────────────────────────────────────────────────────
 8 │                          rel="stylesheet"
   ╰────
  help: See https://nextjs.org/docs/messages/google-font-display

  ⚠ nextjs(google-font-display): `auto` is not a recommended font-display value.
   ╭─[google_font_display.tsx:7:17]
 6 │                        <link
 7 │                          href="https://fonts.googleapis.com/css2?family=Krona+One&display=auto"
   ·                          ──────────────────────────────────────────────────────────────────────
 8 │                          rel="stylesheet"
   ╰────
  help: See https://nextjs.org/docs/messages/google-font-display

  ⚠ nextjs(google-font-display): `fallback` is not a recommended font-display value.
   ╭─[google_font_display.tsx:7:17]
 6 │                        <link
 7 │                          href="https://fonts.googleapis.com/css2?display=fallback&family=Krona+One"
   ·                          ──────────────────────────────────────────────────────────────────────────
 8 │                          rel="stylesheet"
   ╰────
  help: See https://nextjs.org/docs/messages/google-font-display
