crates/oxc_linter/src/snapshots/nextjs_google_font_preconnect.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(google-font-preconnect): `rel="preconnect"` is missing from Google Font.
   ╭─[google_font_preconnect.tsx:4:15]
 3 │                     <div>
 4 │                       <link href="https://fonts.gstatic.com"/>
   ·                        ────
 5 │                     </div>
   ╰────
  help: See: https://nextjs.org/docs/messages/google-font-preconnect

  ⚠ nextjs(google-font-preconnect): `rel="preconnect"` is missing from Google Font.
   ╭─[google_font_preconnect.tsx:4:15]
 3 │                     <div>
 4 │                       <link rel="preload" href="https://fonts.gstatic.com"/>
   ·                        ────
 5 │                     </div>
   ╰────
  help: See: https://nextjs.org/docs/messages/google-font-preconnect
