crates/oxc_linter/src/snapshots/nextjs_no_assign_module_variable.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(no-assign-module-variable): Do not assign to the variable `module`.
   ╭─[no_assign_module_variable.tsx:2:14]
 1 │ 
 2 │                   let module = {};
   ·                       ──────
 3 │ 
   ╰────
  help: See https://nextjs.org/docs/messages/no-assign-module-variable
