crates/oxc_linter/src/snapshots/nextjs_no_async_client_component.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(no-async-client-component): Prevent client components from being async functions.
   ╭─[no_async_client_component.tsx:4:49]
 3 │ 
 4 │                   export default async function MyComponent() {
   ·                                                 ───────────
 5 │                     return <></>
   ╰────
  help: See: https://nextjs.org/docs/messages/no-async-client-component

  ⚠ nextjs(no-async-client-component): Prevent client components from being async functions.
   ╭─[no_async_client_component.tsx:4:49]
 3 │ 
 4 │                   export default async function MyFunction() {
   ·                                                 ──────────
 5 │                     return ''
   ╰────
  help: See: https://nextjs.org/docs/messages/no-async-client-component

  ⚠ nextjs(no-async-client-component): Prevent client components from being async functions.
   ╭─[no_async_client_component.tsx:4:34]
 3 │ 
 4 │                   async function MyComponent() {
   ·                                  ───────────
 5 │                     return <></>
   ╰────
  help: See: https://nextjs.org/docs/messages/no-async-client-component

  ⚠ nextjs(no-async-client-component): Prevent client components from being async functions.
   ╭─[no_async_client_component.tsx:4:34]
 3 │ 
 4 │                   async function MyFunction() {
   ·                                  ──────────
 5 │                     return ''
   ╰────
  help: See: https://nextjs.org/docs/messages/no-async-client-component

  ⚠ nextjs(no-async-client-component): Prevent client components from being async functions.
   ╭─[no_async_client_component.tsx:4:25]
 3 │ 
 4 │                   const MyFunction = async () => {
   ·                         ──────────
 5 │                     return '123'
   ╰────
  help: See: https://nextjs.org/docs/messages/no-async-client-component
