crates/oxc_linter/src/snapshots/nextjs_no_before_interactive_script_outside_document.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(no-before-interactive-script-outside-document): next/script's `beforeInteractive` strategy should not be used outside of `pages/_document.js`
    ╭─[no_before_interactive_script_outside_document.tsx:9:25]
  8 │                         src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js?a=scriptBeforeInteractive"
  9 │                         strategy="beforeInteractive"
    ·                         ────────────────────────────
 10 │                       ></Script>
    ╰────
  help: See https://nextjs.org/docs/messages/no-before-interactive-script-outside-document

  ⚠ nextjs(no-before-interactive-script-outside-document): next/script's `beforeInteractive` strategy should not be used outside of `pages/_document.js`
    ╭─[no_before_interactive_script_outside_document.tsx:9:20]
  8 │                    src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js?a=scriptBeforeInteractive"
  9 │                    strategy="beforeInteractive"
    ·                    ────────────────────────────
 10 │                  ></Script>
    ╰────
  help: See https://nextjs.org/docs/messages/no-before-interactive-script-outside-document

  ⚠ nextjs(no-before-interactive-script-outside-document): next/script's `beforeInteractive` strategy should not be used outside of `pages/_document.js`
    ╭─[no_before_interactive_script_outside_document.tsx:9:27]
  8 │                           src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js?a=scriptBeforeInteractive"
  9 │                           strategy='beforeInteractive'
    ·                           ────────────────────────────
 10 │                         />
    ╰────
  help: See https://nextjs.org/docs/messages/no-before-interactive-script-outside-document

  ⚠ nextjs(no-before-interactive-script-outside-document): next/script's `beforeInteractive` strategy should not be used outside of `pages/_document.js`
    ╭─[no_before_interactive_script_outside_document.tsx:9:27]
  8 │                           src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js?a=scriptBeforeInteractive"
  9 │                           strategy='beforeInteractive'
    ·                           ────────────────────────────
 10 │                         />
    ╰────
  help: See https://nextjs.org/docs/messages/no-before-interactive-script-outside-document

  ⚠ nextjs(no-before-interactive-script-outside-document): next/script's `beforeInteractive` strategy should not be used outside of `pages/_document.js`
    ╭─[no_before_interactive_script_outside_document.tsx:9:27]
  8 │                           src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js?a=scriptBeforeInteractive"
  9 │                           strategy='beforeInteractive'
    ·                           ────────────────────────────
 10 │                         />
    ╰────
  help: See https://nextjs.org/docs/messages/no-before-interactive-script-outside-document

  ⚠ nextjs(no-before-interactive-script-outside-document): next/script's `beforeInteractive` strategy should not be used outside of `pages/_document.js`
    ╭─[no_before_interactive_script_outside_document.tsx:9:27]
  8 │                           src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js?a=scriptBeforeInteractive"
  9 │                           strategy='beforeInteractive'
    ·                           ────────────────────────────
 10 │                         />
    ╰────
  help: See https://nextjs.org/docs/messages/no-before-interactive-script-outside-document
