crates/oxc_linter/src/snapshots/nextjs_no_css_tags.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(no-css-tags): Do not include stylesheets manually.
    ╭─[no_css_tags.tsx:9:21]
  8 │                             <h1>Hello title</h1>
  9 │                             <link href="/_next/static/css/styles.css" rel="stylesheet" />
    ·                              ────
 10 │                           </div>
    ╰────
  help: See https://nextjs.org/docs/messages/no-css-tags

  ⚠ nextjs(no-css-tags): Do not include stylesheets manually.
   ╭─[no_css_tags.tsx:3:13]
 2 │                   <div>
 3 │                     <link href="/_next/static/css/styles.css" rel="stylesheet" />
   ·                      ────
 4 │                   </div>
   ╰────
  help: See https://nextjs.org/docs/messages/no-css-tags
