crates/oxc_linter/src/snapshots/nextjs_no_head_element.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ nextjs(no-head-element): Do not use `<head>` element. Use `<Head />` from `next/head` instead.
   ╭─[no_head_element.tsx:6:27]
 5 │                         <div>
 6 │                           <head>
   ·                           ──────
 7 │                             <title>My page title</title>
   ╰────
  help: See https://nextjs.org/docs/messages/no-head-element

  ⚠ nextjs(no-head-element): Do not use `<head>` element. Use `<Head />` from `next/head` instead.
   ╭─[no_head_element.tsx:7:27]
 6 │                         <div>
 7 │                           <head>
   ·                           ──────
 8 │                             <title>My page title</title>
   ╰────
  help: See https://nextjs.org/docs/messages/no-head-element
